--- a/src/app/board/board.component.css
+++ b/src/app/board/board.component.css
@@ -3,8 +3,14 @@
   width: 50px;
   height: 50px;
   border: 1px solid black;
+  line-height: 50px;
 }
 
 .mine{
   background-color: red;
+}
+
+.reveal {
+  background-color: yellow;
+  color: seagreen;
 }
