--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container text-center">
   <h1>Minesweeper</h1>
   <board-settings (widthSender)="setBoardWidth($event)"></board-settings>
-  <board [board]="board" [revealed]="revealed"></board>
+  <board [board]="board" [revealed]="revealed" [boardWidth]="boardWidth"></board>
 </div>
