finally implement the reveal logic

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -4,8 +4,8 @@
   <div
       class="cell"
       *ngFor="let col of row; let j = index"
-      [ngClass]="{'mine': col === 9, 'reveal': revealed[i][j] === true}"
-      (click)="someFunction(i, j)">
+      [ngClass]="{'grey': revealed[i][j] === false, 'reveal': revealed[i][j] === true}"
+      (click)="RevealNextCell(i, j)">
       <span *ngIf="revealed[i][j] && col != 0">{{col}}</span>
   </div>
 </div>
